
### Stable BOA-4.0.1 Release - Full Edition
### Date: Mon May  6 01:14:59 CEST 2019
### Milestone URL: https://github.com/omega8cc/boa/milestones/4.0.1

# Release Notes:

  This BOA release provides three new PHP versions, system updates, including
  security fixes, many bug fixes, latest Aegir version, plus all included
  Drupal distributions updated to latest versions, and supplied with latest
  Drupal 7 or Drupal 8 core, if possible. Yes, BOA still supports Pressflow 6.
  Yes, Debian Stretch is supported. No newer Ubuntu releases are supported yet.
  Yes, we have added Solr 7 support and every 5 minutes updates!

  Four Drupal 8 based popular distributions have been included by default,
  plus much improved Composer support and automatic permissions-fix-magic
  on Platform and Site Verify tasks. No more manual fixes!

  By the way, Composer will now use PHP 7.3 by default, and you can find
  many useful hints at:
    https://github.com/omega8cc/boa/blob/master/docs/COMPOSER.txt

  Big improvements and changes are coming to (auto)managing Solr cores too!
  Solr cores are are now created every 5 minutes if needed, instead of during
  the nightly procedure only, and Solr 7 is used by default. Existing Solr 4
  cores will continue to work as before, but the system will create new Solr 7
  cores for all compatible sites, and will update the sites/foo.com/solr.php
  accordingly. For existing Solr 4 cores there can be namespace conflicts,
  so please make sure to check the updated sites/foo.com/solr.php file and
  adjust your site configuration if needed.

  Note: If you are using WinSCP and/or Putty on Windows, or Transmit/Coda
  by Panic on a Mac, please check the Known Issues section at the bottom of this
  BOA-4.0.1 release notes.

@=> Solr 7 and Solr 4 support changes and improvements

  Both Solr 7 and Solr 4 powered by Jetty 9 server are available. Supported
  integration modules are limited to latest versions of either search_api_solr