@@ -136,9 +136,9 @@ _TUNE_PHP_CLI_TIMEOUT=9999
 ### DON'T EDIT ANYTHING BELOW THIS LINE    ###
 ###----------------------------------------###
 
-_AEGIR_VERSION="BOA-4.0.1"
+_AEGIR_VERSION="BOA-4.1.2"
 _BRANCH_BOA="4.x"
-_X_VERSION="BOA-4.0.1"
+_X_VERSION="BOA-4.1.2"
 _MYSQLTUNER_VRN=1.7.19
 
 _NOW=$(date +%y%m%d-%H%M%S 2>&1)
