@@ -4,15 +4,15 @@ PATH=/usr/local/bin:/usr/local/sbin:/opt/local/bin:/usr/bin:/usr/sbin:/bin:/sbin
 SHELL=/bin/bash
 
 branch="4.x"
-cluster="BOA-4.0.1"
+cluster="BOA-4.1.2"
 hd="HEAD"
 lgcA="BOA-2.2.9"
 lgcB="BOA-2.3.8"
 lgcC="BOA-2.4.9"
 lgcD="BOA-3.2.2"
 master="master"
-nextv="BOA-4.1.2-dev"
-stbl="BOA-4.0.1"
+nextv="BOA-4.1.3-dev"
+stbl="BOA-4.1.2"
 
 barCnf="/root/.barracuda.cnf"
 barName="BARRACUDA.sh.txt"
