@@ -27,8 +27,8 @@ fi
 
 _TODAY=$(date +%y%m%d 2>&1)
 _TODAY=${_TODAY//[^0-9]/}
-_X_VERSION="BOA-4.0.1"
-_X_SE="411prodQ19"
+_X_VERSION="BOA-4.1.2"
+_X_SE="412prodQ1"
 #
 barCnf="/root/.barracuda.cnf"
 crlGet="-L --max-redirs 10 -k -s --retry 10 --retry-delay 5 -A iCab"
