@@ -79,7 +79,7 @@ satellite_tune_fpm_workers() {
 #
 # Update web user.
 satellite_update_web_user() {
-  _X_SE="411prodQ19"
+  _X_SE="412prodQ1"
   isTest="${_WEB}"
   isTest=${isTest//[^a-z0-9]/}
   if [ ! -z "${isTest}" ]; then
@@ -1303,7 +1303,7 @@ satellite_force_advanced_nginx_config() {
 #
 # Update local INI for PHP CLI on the Aegir Satellite Instance.
 satellite_child_b_update_ini_php_cli() {
-  _X_SE="411prodQ19"
+  _X_SE="412prodQ1"
   _U_HD="${_ROOT}/.drush"
   _U_TP="${_ROOT}/.tmp"
   _U_II="${_U_HD}/php.ini"
@@ -4033,7 +4033,7 @@ satellite_make() {
     fi
   fi
 
-  _X_SE="411prodQ19"
+  _X_SE="412prodQ1"
   if [ ! -e "${_ROOT}/static/control/.ctrl.${_X_SE}.pid" ] \
     && [ -e "/home/${_USER}.ftp/users" ]; then
     if [ -e "/var/xdrago/conf/control-readme.txt" ]; then
@@ -4275,7 +4275,7 @@ satellite_check_octopus_versus_barracuda_version() {
   else
     _VERSIONS_TEST=$(cat /var/log/barracuda_log.txt 2>&1)
     if [[ "${_VERSIONS_TEST}" =~ "${_X_VERSION}" ]] \
-      || [[ "${_VERSIONS_TEST}" =~ "BOA-4.0.1" ]]; then
+      || [[ "${_VERSIONS_TEST}" =~ "BOA-4.1.2" ]]; then
       _VERSIONS_TEST_RESULT=OK
     else
       msg "ERROR: This octopus installer can be used only when the same version"
